<resources>
    <string name="app_name">todo-list</string>
    <string name="today">Today</string>
    <string name="reminders">Reminders</string>
    <string name="today_icon">Today icon</string>
    <string name="scheduled_icon">Scheduled icon</string>
    <string name="scheduled">Scheduled</string>
    <string name="add_a_new_list">Add a new list</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="my_lists">My Lists</string>
    <string name="_1">1</string>
    <string name="list_name">List name</string>
    <string name="_m1"><![CDATA[1 >]]></string>
    <string name="new_list">New List</string>
    <string name="new_note">New Note</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="list_description">List description</string>
    <string name="description">Description</string>
    <string name="colors">Colors</string>
    <string name="list_color">List color</string>
    <string name="icons">Icons</string>
    <string name="home_icon">Home icon</string>
    <string name="school_icon">School icon</string>
    <string name="work_icon">Work icon</string>
    <string name="medical_icon">Medical icon</string>
    <string name="icon_background">Icon background</string>
    <string name="home_main_icon">Home main icon</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="details">Details</string>
    <string name="add_a_date">Add a date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="list">List</string>
    <string name="reminders_name"><![CDATA[Reminders >]]></string>
    <string name="color_list_id">Color list id</string>
    <string name="new_task">New Task</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="date_and_time">Date and Time</string>
    <string name="completed">Completed</string>
    <string name="all">All</string>
    <string name="back">Back</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="choose_a_list"><![CDATA[Choose a list >]]></string>
</resources>