<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gray_rounded_background"
    android:layout_marginBottom="10dp"
    android:paddingStart="20dp"
    android:paddingTop="12.5dp"
    android:paddingEnd="20dp"
    android:paddingBottom="12.5dp">

    <ImageView
        android:id="@+id/img_list"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/list_image"
        android:contentDescription="@string/add_a_new_list"
        android:padding="3.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_icon" />

    <TextView
        android:id="@+id/tv_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/list_name"
        android:textColor="@color/gray_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_list"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list_tasks_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_m1"
        android:textColor="@color/gray_medium"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>