<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gray_rounded_background"
    android:layout_marginBottom="20dp"
    android:paddingStart="20dp"
    android:paddingTop="12.5dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_note_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_rounded_background"
            android:hint="@string/title"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_note_content"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_note_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_rounded_background"
            android:hint="@string/notes"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDateTime_note_content"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_note_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_rounded_background"
            android:hint="@string/date_and_time"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textStatus_note_content"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDateTime_note_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_rounded_background"
            android:hint="@string/status"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>